--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Register Page</title>
 </head>
 <body>
-    
+
+    <header>
+        <a href="#">About Us</a>
+        <a href="#">Log In</a>
+    </header>
+
+    <div class="container">
+
+        <h1>Sign Up</h1>
+
+        <form>
+            <!-- email -->
+            <div>
+                <input type="email" name="email" placeholder="Email" required>
+            </div>
+            <!-- username -->
+            <div>
+                <input type="text" name="username" placeholder="Username" required>
+            </div>
+            <!-- password -->
+            <div>
+                <input type="password" name="password" placeholder="Password" required>
+            </div>
+            <!-- confirm password -->
+            <div>
+                <input type="password" name="confirmpassword" placeholder="Confirm Password" required>
+            </div>
+        
+            <div>
+                <button type="submit">Submit</button>
+            </div>
+
+        </form>
+
+        <footer>
+            <img src="C:\Users\Bisho\CodingFoundations\assignments\staticRegisterPage\assets\amazon.png" alt="Amazon logo">
+            <img src="C:\Users\Bisho\CodingFoundations\assignments\staticRegisterPage\assets\facebook.png" alt="Facebook logo">
+            <img src="C:\Users\Bisho\CodingFoundations\assignments\staticRegisterPage\assets\github.png" alt="Github logo">
+            <img src="C:\Users\Bisho\CodingFoundations\assignments\staticRegisterPage\assets\Instagram.png" alt=" Instagram logo">
+            <img src="C:\Users\Bisho\CodingFoundations\assignments\staticRegisterPage\assets\Slack.png" alt="Slack logo">
+        </footer>
+
+    </div>
 </body>
 </html>
